// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ServicesBlock /> renders properly 1`] = `
<div>
  <section
    class="jsx-1405412835 container"
    data-testid="servicesBlock_section"
  >
    <div
      class="jsx-1405412835 wrapper genericMargins"
    >
      <h1
        class="jsx-3155756322 colored"
      >
        Serviços
      </h1>
      <ul
        class="jsx-1405412835"
      >
        <li
          class="jsx-1405412835"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1405412835"
          >
            Design
          </p>
          <div
            class="jsx-1405412835 backface"
          >
            <p
              class="jsx-1405412835"
            >
              - Web design
            </p>
            <p
              class="jsx-1405412835"
            >
              - Cartazes & flyers
            </p>
            <p
              class="jsx-1405412835"
            >
              - Cartão de contacto
            </p>
            <p
              class="jsx-1405412835"
            >
              - Templates para Social Media
            </p>
            <p
              class="jsx-1405412835"
            >
              - Menus
            </p>
          </div>
        </li>
        <li
          class="jsx-1405412835"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1405412835"
          >
            Social Media
          </p>
          <div
            class="jsx-1405412835 backface"
          >
            <p
              class="jsx-1405412835"
            >
              - Criação de Conteúdo
            </p>
            <p
              class="jsx-1405412835"
            >
              - Análises de mercado
            </p>
            <p
              class="jsx-1405412835"
            >
              - Estratégia e gestão de redes sociais
            </p>
            <p
              class="jsx-1405412835"
            >
              - Promoção de posts
            </p>
            <p
              class="jsx-1405412835"
            >
              - Consultoria
            </p>
          </div>
        </li>
        <li
          class="jsx-1405412835"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1405412835"
          >
            Digital
          </p>
          <div
            class="jsx-1405412835 backface"
          >
            <p
              class="jsx-1405412835"
            >
              - Campanhas paid search (google ads)
            </p>
            <p
              class="jsx-1405412835"
            >
              - Gestão de plataformas de opinião
            </p>
          </div>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`<ServicesBlock /> renders properly in English 1`] = `
<div>
  <section
    class="jsx-1405412835 container"
    data-testid="servicesBlock_section"
  >
    <div
      class="jsx-1405412835 wrapper genericMargins"
    >
      <h1
        class="jsx-3155756322 colored"
      >
        Services
      </h1>
      <ul
        class="jsx-1405412835"
      >
        <li
          class="jsx-1405412835"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1405412835"
          >
            Design
          </p>
          <div
            class="jsx-1405412835 backface"
          >
            <p
              class="jsx-1405412835"
            >
              - Web design
            </p>
            <p
              class="jsx-1405412835"
            >
              - Outdoors & flyers
            </p>
            <p
              class="jsx-1405412835"
            >
              - Contact card
            </p>
            <p
              class="jsx-1405412835"
            >
              - Social Media templates
            </p>
            <p
              class="jsx-1405412835"
            >
              - Menus
            </p>
          </div>
        </li>
        <li
          class="jsx-1405412835"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1405412835"
          >
            Social Media
          </p>
          <div
            class="jsx-1405412835 backface"
          >
            <p
              class="jsx-1405412835"
            >
              - Content creation
            </p>
            <p
              class="jsx-1405412835"
            >
              - Market analysis
            </p>
            <p
              class="jsx-1405412835"
            >
              - Social Media Strategy
            </p>
            <p
              class="jsx-1405412835"
            >
              - Paid social
            </p>
            <p
              class="jsx-1405412835"
            >
              - Consulting
            </p>
          </div>
        </li>
        <li
          class="jsx-1405412835"
          data-testid="servicesBlock_blockWrapper"
        >
          <p
            class="jsx-1405412835"
          >
            Digital
          </p>
          <div
            class="jsx-1405412835 backface"
          >
            <p
              class="jsx-1405412835"
            >
              - Paid search campaigns (google ads)
            </p>
            <p
              class="jsx-1405412835"
            >
              - Opinion platforms management
            </p>
          </div>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`<ServicesBlock /> renders properly on mobile 1`] = `
<div>
  <section
    class="jsx-1405412835 container"
    data-testid="servicesBlock_section"
  >
    <div
      class="jsx-1405412835 wrapper genericMargins"
    >
      <h1
        class="jsx-3155756322 colored"
      >
        Serviços
      </h1>
      <div
        class="slider"
        style="box-sizing: border-box; display: block; height: inherit; position: relative; width: 100%;"
        tabindex="0"
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          style="position: absolute; left: -10000px; width: 1px; height: 1px; overflow: hidden;"
          tabindex="-1"
        >
          Slide 1 of 3
        </div>
        <div
          class="slider-frame"
          style="box-sizing: border-box; display: block; height: 100%; margin: 0px 10px; overflow: hidden; padding: 0px; position: relative; transform: translate3d(0, 0, 0);"
        >
          <ul
            class="slider-list"
            style="box-sizing: border-box; cursor: pointer; display: block; height: 0px; margin: 0px 0px; padding: 0px; position: relative; transform: translate3d(0px, 0px, 0); width: auto; transition: 0s;"
          >
            <li
              class="slider-slide slide-visible slide-current"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="false"
                class="jsx-1405412835 carouselItem"
                data-testid="servicesBlock_blockCarousel"
                tabindex="0"
              >
                <p
                  class="jsx-1405412835"
                >
                  Design
                </p>
                <div
                  class="jsx-1405412835 backface"
                >
                  <p
                    class="jsx-1405412835"
                  >
                    - Web design
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Cartazes & flyers
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Cartão de contacto
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Templates para Social Media
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Menus
                  </p>
                </div>
              </div>
            </li>
            <li
              class="slider-slide"
              inert="true"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="true"
                class="jsx-1405412835 carouselItem"
                data-testid="servicesBlock_blockCarousel"
              >
                <p
                  class="jsx-1405412835"
                >
                  Social Media
                </p>
                <div
                  class="jsx-1405412835 backface"
                >
                  <p
                    class="jsx-1405412835"
                  >
                    - Criação de Conteúdo
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Análises de mercado
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Estratégia e gestão de redes sociais
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Promoção de posts
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Consultoria
                  </p>
                </div>
              </div>
            </li>
            <li
              class="slider-slide"
              inert="true"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="true"
                class="jsx-1405412835 carouselItem"
                data-testid="servicesBlock_blockCarousel"
              >
                <p
                  class="jsx-1405412835"
                >
                  Digital
                </p>
                <div
                  class="jsx-1405412835 backface"
                >
                  <p
                    class="jsx-1405412835"
                  >
                    - Campanhas paid search (google ads)
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Gestão de plataformas de opinião
                  </p>
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="slider-control-centerleft"
          style="position: absolute; top: 50%; left: 0px; transform: translateY(-50%);"
        >
          <button
            aria-label="previous slide"
            class="jsx-361434774"
            data-testid="nukaCarousel_previousSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
              />
            </svg>
          </button>
        </div>
        <div
          class="slider-control-centerright"
          style="position: absolute; top: 50%; right: 0px; transform: translateY(-50%);"
        >
          <button
            aria-label="next slide"
            class="jsx-361434774"
            data-testid="nukaCarousel_nextSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
              />
            </svg>
          </button>
        </div>
        <style
          type="text/css"
        >
          .slider-slide &gt; img { width: 100%; display: block; }
          .slider-slide &gt; img:focus { margin: auto; }
        </style>
      </div>
    </div>
  </section>
</div>
`;

exports[`<ServicesBlock /> renders properly on tablet 1`] = `
<div>
  <section
    class="jsx-1405412835 container"
    data-testid="servicesBlock_section"
  >
    <div
      class="jsx-1405412835 wrapper genericMargins"
    >
      <h1
        class="jsx-3155756322 colored"
      >
        Serviços
      </h1>
      <div
        class="slider"
        style="box-sizing: border-box; display: block; height: inherit; position: relative; width: 90%;"
        tabindex="0"
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          style="position: absolute; left: -10000px; width: 1px; height: 1px; overflow: hidden;"
          tabindex="-1"
        >
          Slide 1 of 3
        </div>
        <div
          class="slider-frame"
          style="box-sizing: border-box; display: block; height: 100%; margin: 0px 10px; overflow: hidden; padding: 0px; position: relative; transform: translate3d(0, 0, 0);"
        >
          <ul
            class="slider-list"
            style="box-sizing: border-box; cursor: pointer; display: block; height: 0px; margin: 0px 0px; padding: 0px; position: relative; transform: translate3d(0px, 0px, 0); width: auto; transition: 0s;"
          >
            <li
              class="slider-slide slide-visible slide-current"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="false"
                class="jsx-1405412835 carouselItem"
                data-testid="servicesBlock_blockCarousel"
                tabindex="0"
              >
                <p
                  class="jsx-1405412835"
                >
                  Design
                </p>
                <div
                  class="jsx-1405412835 backface"
                >
                  <p
                    class="jsx-1405412835"
                  >
                    - Web design
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Cartazes & flyers
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Cartão de contacto
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Templates para Social Media
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Menus
                  </p>
                </div>
              </div>
            </li>
            <li
              class="slider-slide"
              inert="true"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="true"
                class="jsx-1405412835 carouselItem"
                data-testid="servicesBlock_blockCarousel"
              >
                <p
                  class="jsx-1405412835"
                >
                  Social Media
                </p>
                <div
                  class="jsx-1405412835 backface"
                >
                  <p
                    class="jsx-1405412835"
                  >
                    - Criação de Conteúdo
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Análises de mercado
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Estratégia e gestão de redes sociais
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Promoção de posts
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Consultoria
                  </p>
                </div>
              </div>
            </li>
            <li
              class="slider-slide"
              inert="true"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="true"
                class="jsx-1405412835 carouselItem"
                data-testid="servicesBlock_blockCarousel"
              >
                <p
                  class="jsx-1405412835"
                >
                  Digital
                </p>
                <div
                  class="jsx-1405412835 backface"
                >
                  <p
                    class="jsx-1405412835"
                  >
                    - Campanhas paid search (google ads)
                  </p>
                  <p
                    class="jsx-1405412835"
                  >
                    - Gestão de plataformas de opinião
                  </p>
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="slider-control-centerleft"
          style="position: absolute; top: 50%; left: 0px; transform: translateY(-50%);"
        >
          <button
            aria-label="previous slide"
            class="jsx-361434774"
            data-testid="nukaCarousel_previousSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
              />
            </svg>
          </button>
        </div>
        <div
          class="slider-control-centerright"
          style="position: absolute; top: 50%; right: 0px; transform: translateY(-50%);"
        >
          <button
            aria-label="next slide"
            class="jsx-361434774"
            data-testid="nukaCarousel_nextSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
              />
            </svg>
          </button>
        </div>
        <style
          type="text/css"
        >
          .slider-slide &gt; img { width: 100%; display: block; }
          .slider-slide &gt; img:focus { margin: auto; }
        </style>
      </div>
    </div>
  </section>
</div>
`;
